# candle-token-classification

./: Cargo.toml  README.md
examples/bert/: Cargo.toml
examples/bert/src/: main.rs
examples/electra/: Cargo.toml
examples/electra/src/: main.rs
src/: config.rs  lib.rs  models.rs  traits.rs
src/models/: bert.rs  electra.rs
